--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -706,10 +706,10 @@
    }
 
    .community-card img {
-     width: 120px;
+     /*width: 120px;*/
      height: 120px;
      object-fit: cover;
-     border-radius: 50%;
+     /*border-radius: 50%;*/
      margin-bottom: 1rem;
      border: 3px solid var(--md-default-fg-color--lightest);
      transition: var(--transition-base);
